// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkLabel snapshot renders 1`] = `
<AutosizeInput
  injectStyles={true}
  inputClassName=""
  inputRef={[Function]}
  minWidth={1}
  onChange={[Function]}
  style={
    Object {
      "left": 11,
      "pointerEvents": "auto",
      "position": "absolute",
      "top": 11,
    }
  }
/>
`;

exports[`MarkLabel snapshot renders 2`] = `
<AutosizeInput
  injectStyles={true}
  inputClassName=""
  inputRef={[Function]}
  minWidth={1}
  onChange={[Function]}
  style={
    Object {
      "left": 0,
      "pointerEvents": "auto",
      "position": "absolute",
      "top": 0,
    }
  }
/>
`;
